# Student-Study-Assistant

./: .replit  README.md  app.py  pyproject.toml  replit.md  study_generator.py
services/: __init__.py  groq_client.py  pdf_processor.py  rag_engine.py
static/js/: app.js
templates/: index.html
